crates/toml_edit/tests/snapshots/invalid/string/basic-out-of-range-unicode-escape-02.stderr
TOML parse error at line 1, column 8
  |
1 | a = "\U00D80000"
  |        ^
invalid value, expected unicode hexadecimal value
